--- a/style/style.css
+++ b/style/style.css
@@ -99,7 +99,7 @@ a {
 }
 
 a:hover {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
 }
 
 .social {
@@ -109,6 +109,10 @@ a:hover {
 }
 .social i {
   padding: 10px;
+}
+
+i:hover {
+  font-size: 2.2rem;
 }
 
 
