--- a/style/style.css
+++ b/style/style.css
@@ -78,6 +78,7 @@ body {
   max-width: 100px;
   height: auto;
   align-self: center;
+	padding: 10px;
 }
 
 h1 {
@@ -110,6 +111,7 @@ a:hover {
   flex-direction: row;
   font-size: 2rem;
   margin: 0 auto;
+	padding-bottom: 20px;
 }
 
 .fa {
