--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,7 @@ body {
   font-weight: normal;
   font-style: normal;
   text-align: center;
+
 }
 
 .landing-page {
@@ -71,6 +72,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+	flex: grow;
 }
 
 
@@ -83,6 +85,7 @@ body {
 
 h1 {
   font-size: 2rem;
+
 }
 
 h3 {
@@ -101,10 +104,12 @@ a {
 	color: white;
 	transition: font-size 1s ease;
 	-webkit-transition: font-size 1s ease;
+	flex: grow;
 }
 
 a:hover {
   font-size: 1.1rem;
+
 }
 
 .social {
@@ -112,6 +117,7 @@ a:hover {
   font-size: 2rem;
   margin: 0 auto;
 	padding-bottom: 20px;
+
 }
 
 .fa {
@@ -119,10 +125,14 @@ a:hover {
 	padding: 10px;
 	transition: font-size 1s ease;
 	-webkit-transition: font-size 1s ease;
+
+
 }
 
 .fa:hover {
   font-size: 2.2rem;
+	z-index: 100;
+
 }
 
 
